src/main/java/examples/basic/invalid/BasicSendWithInvalidAttachment.java
package examples.basic.invalid;

import com.socketLabs.SendResponse;
import examples.Example;

public class BasicSendWithInvalidAttachment implements Example {

    public SendResponse RunExample ()  throws Exception {
        return null;
    }
}
